NEW - bug 335254: [api] add o.e.m.commons.http bundle based on HttpClient 4.1 https://bugs.eclipse.org/bugs/show_bug.cgi?id=335254
Change-Id: If572b67444f38a2fb7bec4af9f9779b9613f6189